Fixed displaying name of product when it's too long, also, set up the like functionality

--- a/pc_shop_frontend/src/components/ComputerList/Computer/Computer.css
+++ b/pc_shop_frontend/src/components/ComputerList/Computer/Computer.css
@@ -25,7 +25,7 @@
 
 .computer-name {
     font-family: Montserrat-Bold;
-    margin: 0 0 0.7143em;
+    margin: 0 1 0.7143em;
     font-size: 1.7em;
     color: #C00000;
     display: -webkit-box;
