--- a/pc_shop_frontend/src/components/KeyboardList/Keyboard/Keyboard.css
+++ b/pc_shop_frontend/src/components/KeyboardList/Keyboard/Keyboard.css
@@ -9,60 +9,40 @@
     flex-direction: column;
     height: auto;
     display: inline-flex;
-    align-items: flex-start; /* Align characteristics to the start */
+    align-items: flex-start;
+    overflow: hidden;
 }
 
 
 .keyboard-image {
     width: 100%;
-    height: 255px;
+    height: 18em;
 
-    /* Responsive styles for smaller screens */
-    @media screen and (max-width: 768px) {
-        height: 50%;
-    }
 }
 
 .keyboard-details {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    line-clamp: 3;
-    -webkit-box-orient: vertical;
-    padding: 10px;
-    max-height: 50px; /* Set a maximum height, adjust as needed */
-    flex-grow: 1;
+    padding: 0.2em;
 }
 
 .keyboard-name {
     font-family: Montserrat-Bold;
-    margin: 0 0 10px;
-    font-size: 1.5em;
+    margin: 0 1 0.7143em;
+    font-size: 1.7em;
     color: #C00000;
-    
-
-    /* Responsive styles for smaller screens */
-    @media screen and (max-width: 768px) {
-        font-size: 1.2em;
-    }
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Adjust the number of lines to display */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .keyboard-price {
     color: black;
-    font-size: 20px;
-    margin-bottom: 10px;
+    font-size: 1.4em;
+    margin-bottom: 0.7em;
     position: absolute;
     bottom: 0;
-    left: 16px;
+    left: 1.1em;
 
-    /* Responsive styles for smaller screens */
-    @media screen and (max-width: 768px) {
-        font-size: 16px;
-        margin-bottom: 8px;
-        left: 12px;
-        position: relative;
-    }
 }
 
 .keyboard-link {
@@ -86,18 +66,3 @@
     }
 }
 
-.characteristics {
-    color: #000000;
-    /* font-weight: bolder; */
-    list-style-type: disc;
-    font-size: 24px;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    align-items: flex-start; 
-
-    @media screen and (max-width: 768px) {
-        font-size: 16px;
-        padding: 8px;
-    }
-}
