--- a/pc_shop_frontend/src/components/ProductDetails/ProductDetails.css
+++ b/pc_shop_frontend/src/components/ProductDetails/ProductDetails.css
@@ -9,6 +9,20 @@
     padding: 20px;
     flex-shrink: 0;
     margin-left: 100px;
+    background-color: #ffffff;
+}
+
+
+.like-button {
+    font-size: 2em;
+    color: #aeaeae;
+    cursor: pointer;
+    margin-left: 10px;
+    transition: color 0.3s ease;
+}
+
+.like-button.liked {
+    color: #C00000;
 }
 
 .product-images {
@@ -17,12 +31,13 @@
 }
 
 .product-images img {
-    width: 80%;  
+    width: 80%;
     height: auto;
     padding: 10px;
     box-sizing: border-box;
-    object-fit: contain;  
+    object-fit: contain;
 }
+
 .main-image-container {
     width: 40em;
     height: 40em;
@@ -40,9 +55,11 @@
     margin-top: 10px;
     display: flex;
     align-items: center;
-    overflow: hidden; /* Ensure that only the visible images are shown */
-    transition: transform 0.5s ease; /* Add a transition effect to the transform property */
-  }
+    overflow: hidden;
+    /* Ensure that only the visible images are shown */
+    transition: transform 0.5s ease;
+    /* Add a transition effect to the transform property */
+}
 
 .image-slider img {
     max-width: 100px;
@@ -110,7 +127,7 @@
     -webkit-text-stroke: 2px #aeaeae;
 }
 
-.fa-greater-than{
+.fa-greater-than {
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -144,4 +161,3 @@
     font-size: 1em;
     -webkit-text-stroke: 2px #C00000;
 }
-
